FIX get-started row align

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,10 @@ img {
     justify-content: space-between;
 }
 
+.justify-content-center {
+    justify-content: center;
+}
+
 .item-center {
     align-items: center;
 }
